fix link on mobile (#48)

--- a/phalcon/css/core-custom.css
+++ b/phalcon/css/core-custom.css
@@ -174,6 +174,10 @@
   .buildwith-nav__list a {
     padding: 8px 10px 8px;
   }
+
+  .info--team a {
+    word-break: break-word;
+  }
 }
 
 .sponsors__item img {
